modules/web/scss/modules/diagram.scss
.panel {
    & .panel-header {
        & > rect {
            fill: $panel-header-bgcolor;
            stroke: $panel-header-border-color;
            stroke-width: 2px;
        }

        & > text {
            fill: $panel-header-color;
        }

        & > .panel-heading-decorator {
            width: 3px;
            fill: #3498db;
            stroke-width: 0;
        }
    }

    & .panel-body {
        & .panel-body-rect {
            fill: $panel-body-bgcolor;
            fill-opacity: 0.4;
            stroke-width: 2px;
            //shape-rendering: crispEdges;
            stroke: $panel-body-border-color;

            &.rect.drop-zone {
               fill: $panel-body-dropzone-bgcolor;
               fill-opacity: 0;
            }
        }
    }
}



.default-worker-life-line {
    stroke: $default-worker-lifeline-color;
    stroke-width: 2;
    cursor: pointer;
}
.default-worker-life-line-polygon{
    fill: $default-worker-lifeline-color;
    stroke-width: 0;
}

.worker-life-line {
    cursor: pointer;
    stroke: $worker-lifeline-color;
    stroke-width: 2;
}

.worker-life-line-polygon{
    fill: $worker-lifeline-color;
    stroke-width: 0;
}

.connector-life-line {
    cursor: pointer;
    stroke: $connector-lifeline-color;
    stroke-width: 2;
}
.connector-life-line-polygon {
    fill: $connector-lifeline-color;
    stroke-width: 0;
}

.life-line-text{
    fill: #f1f1f1;
    stroke: #f1f1f1;
    stroke-width: 0.5;
}

.import-definition-decorator {
    width: 3px;
    fill: $brand-primary;
}

.import-badge {
    fill: $brand-primary;
}

.import-badge-text {
    fill: #fff;
}

.global-definition-decorator {
    width: 3px;
    fill: #9b59b6;
}

.global-badge {
    fill: #9b59b6;
}

.global-badge-text {
    fill: #fff;
}

.package-declaration-item,
.global-definition-item {
    & .background,
    & .delete-background {
        fill: #eee;
    }
}

.add-import-button-background,
.add-import-button,
.add-global-button-background,
.add-global-button {
    fill: #eee;
}

.package-definition-header {
    fill: $package-configs-bgcolor;
    cursor: pointer;
}

.package-definition-head {
    cursor: pointer;
}

.package-definition-label {
    dominant-baseline: central;
    fill: $package-definition-color;
}

.annotation-container {
    background: #f4f4f4;
    overflow: auto;
    padding: 7px;
    z-index: 1;
    overflow: visible;
}

.annotation-table td {
    height: 20px;
    line-height: 10px;
}

.annotation-table td .react-autosuggest__container {
    line-height: 15px;
}

.annotation-key .package-name {
    font-weight: 500;
    color: #ea940c;
}

.react-autosuggest__suggestions-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.react-autosuggest__suggestion {
    padding: 4px;
}

.react-autosuggest__suggestion.react-autosuggest__suggestion--highlighted,
.react-autosuggest__suggestion:hover {
    background: #333;
    color: #eee;
    cursor: pointer;
}

.annotationRect {
    fill: $annotation-wrapper-bgcolor;
    shape-rendering: crispEdges;
    stroke: #ccc;
    stroke-width: 0.5;
}

.annotation-text {
    font-size: 0.90em;
    fill: $annotation-wrapper-text-color;
}

.action-dash-line{
    stroke: $primary-line-bgcolor;
    fill: $primary-line-bgcolor;
    stroke-dasharray: 5,5;
}
.action-arrow,
.action-arrow-head{
    stroke: $primary-line-bgcolor;
    fill: $primary-line-bgcolor;
}

.struct-content-operations-wrapper{
    padding: 10px;
    float: left;
    fill: #ddd;
    stroke-width: 0;
}

.struct-type-dropdown-wrapper,
.struct-input-value-wrapper {
    fill: #f5f5f5;
    stroke-width: 1.5;
    stroke: #ccc;
    shape-rendering: crispEdges;
    stroke-dasharray: 3,3;
}

.struct-add-icon-wrapper {
    cursor:pointer;
    opacity: 0.5;
}

.struct-add-icon-wrapper:hover {
    cursor:pointer;
    opacity: 1;
}

.struct-input-text {
    dominant-baseline: middle;
    fill: #707276;
}

.struct-input-text:hover {
    dominant-baseline: middle;
    fill:#333;
}

.struct-added-value-wrapper {
    fill: #f3f3f3;
    stroke-width: 0.5;
    stroke: #dfdfdf;
    shape-rendering: crispEdges;
}

.parameter-delete-icon-wrapper {
    fill: #8ebadd;
    shape-rendering: crispEdges;
    padding: 13px;
}

.parameter-delete-icon-wrapper:hover {
    opacity: 1;
    fill:#dcdcdc;
}

.argument-parameter-group,
.annotation-attachment-group,
.return-parameter-group{
    fill: #dcdcdc;
    height: 30px;
}

.parameter-bracket-text,
.return-types-opening-brack-text,
.return-types-closing-brack-text {
    fill: #999;
    dominant-baseline: text-before-edge;
}

.parameter-prefix-text, .parameter-text {
    dominant-baseline: text-before-edge;
    cursor: default;
}

.parameter-space {
}

.parameter-wrapper {
    fill: #8ebadd;
    shape-rendering: crispEdges;
}

